# medix

./: .coveragerc  .env  .env.example  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements-build.in  requirements.txt
medixus/: asgi.py  celery.py  urls.py  wsgi.py
medixus/apps/accounts/: admin.py  apps.py  selectors.py
medixus/apps/accounts/api/v1/: urls.py
medixus/apps/accounts/models/: user_account.py
medixus/apps/accounts/services/: password.py
medixus/apps/accounts/tests/: test_api_permissions.py
medixus/apps/accounts/tests/test_api/: test_login_api.py  test_logout_api.py  test_registration_api.py
medixus/apps/accounts/tests/test_models/: test_user_model.py
medixus/apps/accounts/tests/test_selectors/: test_get_users_selector.py
medixus/apps/accounts/tests/test_serializers/: test_change_password_serializer.py  test_confirm_reset_password_serializer.py  test_login_serializer.py  test_registration_serializer.py  (+1 more)
medixus/apps/common/: apps.py
medixus/apps/new_feature/: apps.py  models.py  views.py
medixus/apps/new_feature/migrations/: 0001_initial.py  0002_rename_images_gestationalimages_and_more.py  0003_remove_gestationaltable_images_and_more.py
medixus/apps/new_feature/serializers/: gestation.py  gestation_images.py
medixus/apps/new_feature/views/: gestation.py
medixus/apps/referral/: apps.py  models.py  urls.py  views.py
medixus/apps/referral/migrations/: 0001_initial.py
medixus/settings/: __init__.py  django.py  medixus.py
medixus/settings/contrib/: celery.py  redis.py  rest_framework.py  sentry.py  swagger.py
(+9 files in other folders)
